FIXME: overflow img element

--- a/client/src/routes/Display/DragBoard/DragBoard.css
+++ b/client/src/routes/Display/DragBoard/DragBoard.css
@@ -40,3 +40,7 @@
 .img-input-height{
 	height: 35px;
 }
+
+.imgContainer {
+	overflow: auto;
+}
